# Basic-3d-lib

./: .gitignore  3d.pptx  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  STM32H750VBTx.ld  STM32H750VBTxNew.ld  assets.yml  b3d.c  b3d.h  b3d_common.h  b3d_config.h  b3d_draw.c  b3d_draw.h  b3d_math.c  b3d_math.h  b3d_obj.c  b3d_obj.h  b3d_particle.c  b3d_particle_rain.h  b3d_port.c  b3d_port.h  b3d_renderObj.c  b3d_renderObj.h  b3d_testObj.c  b3d_testObj.h  b3d_types.h  game.cpp  heap_4.c  heap_4.h  manlowpoly.c  manlowpoly.h  metadata.yml  ship2.c  ship2.h  sprite.c  sprite.h
.github/workflows/: build.yml
basic-3d/: CMakeLists.txt  CMakeLists.txt.old  b3d.c  b3d.h  b3d_common.h  b3d_config.h  b3d_draw.c  b3d_math.c  b3d_math.h  b3d_obj.c  b3d_obj.h  b3d_particle.c  b3d_particle.h  b3d_particle_rain.c  b3d_particle_rain.h  b3d_port.c  b3d_port.h  b3d_renderObj.c  b3d_renderObj.h  b3d_skyBox.c  b3d_skyBox.h  b3d_testObj.c  b3d_testObj.h  b3d_types.h  heap_4.c  heap_4.h
tool/: objConvert.py  out.pal  pal_and_image_process.ipynb
